<resources>
    <string name="app_name" translatable="false">My Store</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_sell" translatable="false">Sell Product</string>
    <string name="title_products" translatable="false">Products</string>
    <string name="title_more" translatable="false">More</string>
    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="ban_quen_mat_khau" translatable="false">Do you forget password?</string>
    <string name="dang_nhap" translatable="false">Login</string>
    <string name="dang_ki_tai_khoan" translatable="false">Register acount</string>
    <string name="ten_cua_hang" translatable="false">Name shop</string>
    <string name="ho_ten" translatable="false">Full name</string>
    <string name="so_dien_thoai" translatable="false">Phone</string>
    <string name="dang_ki" translatable="false">Register</string>
    <string name="them_brand" translatable="false">Add brand</string>
    <string name="them_category" translatable="false">Add category</string>


    <string name="search_product" translatable="false">Search product</string>
    <string name="enter_email" translatable="false">Enter email</string>
    <string name="enter_password" translatable="false">Enter password</string>
    <string name="enter_info" translatable="false">Enter information</string>
    <string name="amout" translatable="false"><![CDATA[Amount product>0]]></string>
    <string name="price" translatable="false"><![CDATA[Price product >0]]></string>
    <string name="prices" translatable="false"><![CDATA[Price product >0]]></string>
    <string name="name" translatable="false">Name</string>
    <string name="edit_info" translatable="false">Edit information</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="add_em">Add employee</string>
    <string name="ems">Employees</string>
    <string name="name_product">Name product</string>
    <string name="description">Description</string>
    <string name="amountt">Amount</string>
    <string name="price_in">Price in</string>
    <string name="price_out">Price out</string>
    <string name="barcode">Code barcode</string>
    <string name="show_pass">Show password</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="error_pass">Password must be at least 7 characters</string>
    <string name="detail_product">Detail product</string>
    <string name="add_size">Enter size</string>
    <string name="title_category">Category</string>
    <string name="title_brand">Brand</string>
    <string name="name_brand">Name brand</string>
    <string name="name_category">Name category</string>
    <string name="update_categoty">Update category</string>
    <string name="update_brand">Update brand</string>
    <string name="exit">Exit</string>
    <string name="name_size">Name size</string>
    <string name="title_size">Add Size</string>
    <string name="add_info">Add information</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="title_login">Login with My Shop</string>
    <string name="title_register">Register with My Shop</string>
    <string name="update_size">Update size</string>
    <string name="size">Size</string>
</resources>
