<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.RegisterActivity">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:theme="@style/ToolbarTheme"/>
    <EditText
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_150dp"
            android:id="@+id/ed_Email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/email"
            android:padding="@dimen/_8dp"
            android:background="@drawable/boder_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:maxLines="1"
            android:layout_marginTop="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@id/ed_Email"
            android:id="@+id/edNameShop"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/ten_cua_hang"
            android:padding="@dimen/_8dp"
            android:background="@drawable/boder_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:maxLines="1"
            android:layout_marginTop="@dimen/_15dp"
            android:id="@+id/edName"
            app:layout_constraintTop_toBottomOf="@id/edNameShop"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/ho_ten"
            android:padding="@dimen/_8dp"
            android:background="@drawable/boder_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:maxLines="1"
            android:maxLength="10"
            android:inputType="phone"
            android:layout_marginTop="@dimen/_15dp"
            android:id="@+id/edPhone"
            app:layout_constraintTop_toBottomOf="@id/edName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/so_dien_thoai"
            android:padding="@dimen/_8dp"
            android:background="@drawable/boder_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_15dp"
            android:id="@+id/ed_Pass"
            app:layout_constraintTop_toBottomOf="@id/edPhone"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/password"
            android:padding="@dimen/_8dp"
            android:background="@drawable/boder_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:theme="@style/AppTheme.WhiteAccent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="@dimen/_25dp"
            android:layout_height="@dimen/_25dp"
            android:layout_marginTop="36dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <Button
            android:layout_marginTop="@dimen/_30dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/ed_Pass"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:textAllCaps="false"
            android:id="@+id/btnRegister"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/dang_ki"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"/>


</android.support.constraint.ConstraintLayout>