<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/_10dp"
              android:background="@color/white"
              android:layout_below="@id/toolbars"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


        <EditText
                android:maxLines="1"
                android:layout_marginTop="@dimen/_20dp"
                android:padding="@dimen/_12dp"
                android:hint="@string/name_product"
                android:background="@drawable/boder_ed"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_15_sp"
                android:id="@+id/edNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />




        <EditText
                android:maxLines="2"
                android:layout_marginTop="@dimen/_12dp"
                android:hint="@string/description"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@drawable/boder_ed"
                android:textSize="@dimen/_15_sp"
                android:padding="@dimen/_12dp"
                android:id="@+id/edDesciptionProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />




        <EditText
                android:layout_marginTop="@dimen/_12dp"
                android:padding="@dimen/_12dp"
                android:hint="@string/amountt"
                android:inputType="number"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@drawable/boder_ed"
                android:id="@+id/edAmount"
                android:textSize="@dimen/_15_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />



        <EditText
                android:layout_marginTop="@dimen/_12dp"
                android:background="@drawable/boder_ed"
                android:padding="@dimen/_12dp"
                android:inputType="number"
                android:textCursorDrawable="@drawable/color_cursor"
                android:hint="@string/price_in"
                android:id="@+id/edPrice_in"
                android:textSize="@dimen/_15_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />



        <EditText
                android:layout_marginTop="@dimen/_12dp"
                android:background="@drawable/boder_ed"
                android:hint="@string/price_out"
                android:inputType="number"
                android:textCursorDrawable="@drawable/color_cursor"
                android:id="@+id/edPrice_out"
                android:textSize="@dimen/_15_sp"
                android:padding="@dimen/_12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />



        <FrameLayout
                android:layout_marginTop="@dimen/_12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:padding="@dimen/_12dp"
                    android:background="@drawable/boder_ed"
                    android:hint="@string/barcode"
                    android:gravity="center_vertical"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15_sp"
                    android:inputType="numberDecimal"
                    android:layout_toRightOf="@id/imgBarcode"
                    android:id="@+id/edBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />


            <ImageView
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_centerVertical="true"
                    android:id="@+id/imgBarcodes"
                    android:src="@drawable/barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </FrameLayout>





        <FrameLayout
                android:layout_marginTop="@dimen/_12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:background="@drawable/boder_ed"
                    android:padding="@dimen/_12dp"
                    android:hint="@string/category"
                    android:gravity="center_vertical"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15_sp"
                    android:layout_toRightOf="@id/imgBarcode"
                    android:id="@+id/edCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />

            <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_centerVertical="true"
                    android:id="@+id/imgCategory"
                    android:src="@drawable/iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </FrameLayout>






        <FrameLayout
                android:layout_marginTop="@dimen/_12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:background="@drawable/boder_ed"
                    android:hint="@string/brand"
                    android:gravity="center_vertical"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15_sp"
                    android:padding="@dimen/_12dp"
                    android:layout_toRightOf="@id/imgBarcode"
                    android:id="@+id/edBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />

            <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_centerVertical="true"
                    android:id="@+id/imgBrand"
                    android:src="@drawable/iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </FrameLayout>




        <FrameLayout
                android:layout_marginTop="@dimen/_12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:padding="@dimen/_12dp"
                    android:hint="@string/supplier"
                    android:background="@drawable/boder_ed"
                    android:gravity="center_vertical"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15_sp"
                    android:layout_toRightOf="@id/imgBarcode"
                    android:id="@+id/edSupplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />


            <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_centerVertical="true"
                    android:id="@+id/imgSupplier"
                    android:src="@drawable/iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </FrameLayout>


</LinearLayout>