<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="160dp"
>
    <RelativeLayout
            android:id="@+id/ln"
            android:background="@drawable/border_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="160dp">
        <TextView android:layout_width="match_parent"
                  android:textStyle="bold"
                  android:textColor="@color/black"
                  android:padding="@dimen/_15dp"
                  android:gravity="center"
                  android:id="@+id/tv_title"
                  android:text="@string/title_size"
                  android:layout_height="wrap_content"/>
        <View android:layout_width="match_parent"
              android:background="@color/gray"
              android:layout_below="@id/tv_title"
              android:layout_height="1dp"/>
        <EditText android:layout_width="match_parent"
                  android:lines="1"
                  android:background="@android:color/transparent"
                  android:layout_marginTop="15dp"
                  android:padding="@dimen/_10dp"
                  android:hint="@string/name_size"
                  android:textSize="@dimen/_14sp"
                  android:layout_below="@id/tv_title"
                  android:id="@+id/edSize"
                  android:layout_height="wrap_content"/>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_centerHorizontal="true"
                      android:layout_alignParentBottom="true"
                      android:layout_height="wrap_content">
            <View android:layout_width="match_parent"
                  android:background="@color/gray"
                  android:layout_height="1dp"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content">
                <TextView
                        android:textColor="@color/black"
                        android:layout_below="@id/edSize"
                        android:textAllCaps="false"
                        android:id="@+id/btnExit"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/exit"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"/>
                <View android:layout_width="1dp"
                      android:background="@color/gray"
                      android:layout_height="match_parent"/>
                <TextView
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"
                        android:layout_below="@id/edSize"
                        android:textAllCaps="false"
                        android:id="@+id/btnAddSize"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/add"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>