<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:swipe="http://schemas.android.com/apk/res-auto"
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        swipe:leftEdgeSwipeOffset="0dp"
        swipe:rightEdgeSwipeOffset="0dp">


    <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/bottom_wrapper"
            android:layout_width="180dp"
            android:weightSum="3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >
        <View android:layout_width="1dp"
              android:background="@color/gray"
              android:layout_height="90dp"/>

        <TextView
                android:layout_centerVertical="true"
                android:background="#0076a5"
                android:id="@+id/tvAddProduct"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#fff"/>

        <TextView
                android:layout_centerVertical="true"
                android:background="#003c54"
                android:id="@+id/tvEdProduct"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/edit"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#fff"/>

        <TextView
                android:layout_centerVertical="true"
                android:background="#E61717"
                android:layout_toRightOf="@id/tvEdProduct"
                android:text="@string/delete"
                android:id="@+id/tvDeProduct"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#fff"/>


    </LinearLayout>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:paddingLeft="@dimen/_10dp"
                android:paddingTop="@dimen/_5dp"
                android:paddingBottom="@dimen/_5dp"
                android:layout_width="match_parent"
                android:layout_height="90dp">
    <ImageView
            android:id="@+id/iv_product"
            android:scaleType="centerInside"
            android:background="@drawable/border_image"
            android:src="@drawable/ic_edit"
            android:layout_width="70dp"
            android:layout_height="80dp"/>
    <TextView
            android:textSize="@dimen/_13sp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/_8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Ao so mi dep"
            android:layout_toRightOf="@id/iv_product"
            android:id="@+id/tvNameProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:textSize="@dimen/_13sp"
            android:layout_marginLeft="@dimen/_8dp"
            android:layout_below="@id/tvNameProduct"
            android:textColor="@color/black"
            android:text="Ma SP: 1"
            android:layout_toRightOf="@id/iv_product"
            android:id="@+id/tvIDProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:textSize="@dimen/_13sp"
            android:layout_marginLeft="@dimen/_8dp"
            android:layout_below="@id/tvIDProduct"
            android:textColor="@color/black"
            android:text="Gia ban 100.0000"
            android:layout_toRightOf="@id/iv_product"
            android:id="@+id/tvPrice_In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <TextView
            android:textSize="@dimen/_13sp"
            android:layout_marginLeft="@dimen/_8dp"
            android:layout_below="@id/tvPrice_In"
            android:textColor="@color/black"
            android:text="So luong:10"
            android:layout_toRightOf="@id/iv_product"
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:visibility="gone"
            android:textSize="@dimen/_13sp"
            android:layout_marginLeft="@dimen/_8dp"
            android:layout_below="@id/tvAmount"
            android:textColor="@color/black"
            android:text="Danh muc: Quan ao"
            android:layout_toRightOf="@id/iv_product"
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</RelativeLayout>
</com.daimajia.swipe.SwipeLayout>